# obsidian-vault-mcp-ext

./: .gitignore  README.md  pyproject.toml
docs/: import.md  maintenance.md  recurring.md  semantic.md  templates.md
src/obsidian_vault_mcp_ext/: __init__.py  __main__.py  _rest.py  templates.py  templates_extension.py
src/obsidian_vault_mcp_ext/imports/: __init__.py  _config.py  _fetch.py  extension.py  tools.py
src/obsidian_vault_mcp_ext/maintenance/: __init__.py  _config.py  extension.py  tools.py
src/obsidian_vault_mcp_ext/recurring/: __init__.py  _config.py  cli.py  extension.py  helpers.py  tools.py
src/obsidian_vault_mcp_ext/semantic/: __init__.py  _config.py  chunker.py  engine.py  extension.py  models.py  tools.py
src/obsidian_vault_mcp_ext/templates/: __init__.py  _config.py  extension.py
tests/: test_imports_extension.py  test_isolation.py  test_maintenance_extension.py  test_recurring_extension.py  test_semantic_extension.py  test_templates_extension.py
